network-policy/np-wordpress.yaml
# Regra de permissão de acesso para o service do wordpress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: microcontainers
spec:
  rules:
  - host: wordpress.service.com # regra de roteamento para o service do wordpress
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress 
            port:
              number: 80
